--- a/app/views/shared/_top_page_middle.html.haml
+++ b/app/views/shared/_top_page_middle.html.haml
@@ -17,42 +17,29 @@
                 家電・スマホ・カメラ
               =link_to "#", class:"middle__main__category__under__area__a__parts" do
                 おもちゃ・ホビー・グッズ
-      
       .middle__main__block
         .middle__main__block__item
           .middle__main__block__item__top
             %h3.middle__main__block__item__top__left
               レディース新着アイテム
-              =link_to tests_product_details_path, class:'middle__main__block__item__top__right' do
-                もっと見る
+            =link_to tests_product_details_path, class:'middle__main__block__item__top__right' do
+              もっと見る
               %i.fas.fa-chevron-right
           .block__area
             - (1..10).each do |i|
               .block__area__product
-                .block__area__product__good-pic_price_box 
-                  = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
-                  .block__area__product__good-pic_price_box__price
-                    = "¥#{@good.price}"
-                %h3.block__area__product__title
-                  = @good.goods_description
+                = image_tag @image.goods_picture.url, class: "goods_picture_1"
       .middle__main__block
         .middle__main__block__item
           .middle__main__block__item__top
             %h3.middle__main__block__item__top__left
               メンズ新着アイテム
-              =link_to "#", class:'middle__main__block__item__top__right' do
-                もっと見る
+            =link_to "#", class:'middle__main__block__item__top__right' do
+              もっと見る
               %i.fas.fa-chevron-right
           .block__area
             - (1..10).each do |i|
               .block__area__product
-                .block__area__product__good-pic_price_box 
-                  = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
-                  .block__area__product__good-pic_price_box__price
-                    ¥
-                %h3.block__area__product__title
-                  アマガエルくん
-                  
       .middle__main__block
         .middle__main__block__item
           .middle__main__block__item__top
@@ -64,12 +51,6 @@
           .block__area
             - (1..10).each do |i|
               .block__area__product
-                .block__area__product__good-pic_price_box 
-                  = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
-                  .block__area__product__good-pic_price_box__price
-                    ¥
-                %h3.block__area__product__title
-                  アマガエルくん
       .middle__main__block
         .middle__main__block__item
           .middle__main__block__item__top
@@ -81,12 +62,6 @@
           .block__area
             - (1..10).each do |i|
               .block__area__product
-                .block__area__product__good-pic_price_box 
-                  = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
-                  .block__area__product__good-pic_price_box__price
-                    ¥
-                %h3.block__area__product__title
-                  アマガエルくん
       .middle__main__category
         %h2.middle__main__category__text
           人気のブランド
@@ -112,12 +87,6 @@
           .block__area
             - (1..10).each do |i|
               .block__area__product
-                .block__area__product__good-pic_price_box 
-                  = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
-                  .block__area__product__good-pic_price_box__price
-                    ¥
-                %h3.block__area__product__title
-                  アマガエルくん
       .middle__main__block
         .middle__main__block__item
           .middle__main__block__item__top
@@ -129,12 +98,6 @@
           .block__area
             - (1..10).each do |i|
               .block__area__product
-                .block__area__product__good-pic_price_box 
-                  = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
-                  .block__area__product__good-pic_price_box__price
-                    ¥
-                %h3.block__area__product__title
-                  アマガエルくん
       .middle__main__block
         .middle__main__block__item
           .middle__main__block__item__top
@@ -146,12 +109,6 @@
           .block__area
             - (1..10).each do |i|
               .block__area__product
-                .block__area__product__good-pic_price_box 
-                  = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
-                  .block__area__product__good-pic_price_box__price
-                    ¥
-                %h3.block__area__product__title
-                  アマガエルくん
       .middle__main__block
         .middle__main__block__item
           .middle__main__block__item__top
@@ -163,12 +120,6 @@
           .block__area
             - (1..10).each do |i|
               .block__area__product
-                .block__area__product__good-pic_price_box 
-                  = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
-                  .block__area__product__good-pic_price_box__price
-                    ¥
-                %h3.block__area__product__title
-                  アマガエルくん
 
 =link_to tests_exhibit_path, class: 'exhibit_btn' do
   .exhibit_btn__moji
