--- a/app/assets/stylesheets/_purchase_completed.scss
+++ b/app/assets/stylesheets/_purchase_completed.scss
@@ -1,7 +1,6 @@
 .purchase-completed-wrapper{
     width: 100%;
     &__main-container{
-        height: 700px;
         width: 700px;
         background-color:  #fff;
         margin: 0 auto 0;
@@ -76,7 +75,27 @@
             &__note{
                 float: right;
                 font-size: 16px;
-                margin: 6px 22px 0 0
+                margin: 6px 22px 0 0;
+            }
+        }
+
+        &__address{
+            padding: 40px 170px 40px;
+            height: 100px;
+            line-height: 16px;
+            &__title{
+                font-weight: bold;
+                margin-bottom: 10px;
+            }
+            &__post-code{
+                font-size: 14px;
+            }
+            &__city{
+                font-size: 14px;
+                
+            }
+            &__name{
+                font-size: 14px;
             }
         }
 
