--- a/app/assets/stylesheets/_purchase-confirmation.scss
+++ b/app/assets/stylesheets/_purchase-confirmation.scss
@@ -123,7 +123,7 @@ main {
                                 cursor: pointer;
                                 text-align: center;
                             }
-                            #payjp_checkout_box{
+                            #payjp_checkout_box input{
                                 margin: 8px 0 0;
                                 background: #ea352d;
                                 border: 1px solid #ea352d;
