--- a/app/views/shared/_top_page_middle.html.haml
+++ b/app/views/shared/_top_page_middle.html.haml
@@ -33,7 +33,7 @@
                   .block__area__product__good-pic_price_box__price
                     = "¥#{@good.price}"
                 .block__area__product__title
-                  = @good.goods_description
+                  = @good.goods_description    
       .middle__main__block
         .middle__main__block__item
           .middle__main__block__item__top
@@ -72,12 +72,11 @@
         .middle__main__block__item
           .middle__main__block__item__top
             %h3.middle__main__block__item__top__left
-              おもちゃ・ホビー・グッズ新着アイテム
+              おもちゃ・ホビー・グッズ
             =link_to "#", class:'middle__main__block__item__top__right' do
               もっと見る
               %i.fas.fa-chevron-right
           .block__area
-            .block__area
             - (1..10).each do |i|
               .block__area__product
                 .block__area__product__good-pic_price_box
@@ -145,7 +144,12 @@
           .block__area
             - (1..10).each do |i|
               .block__area__product
-                = image_tag @image.goods_picture.url, class: "goods_picture_ladies"
+                .block__area__product__good-pic_price_box
+                  = image_tag @image.goods_picture.url, class: "goods_picture_ladies"
+                  .block__area__product__good-pic_price_box__price
+                    = "¥#{@good.price}"
+                .block__area__product__title
+                  = @good.goods_description
       .middle__main__block
         .middle__main__block__item
           .middle__main__block__item__top
@@ -157,7 +161,12 @@
           .block__area
             - (1..10).each do |i|
               .block__area__product
-                = image_tag @image.goods_picture.url, class: "goods_picture_ladies"
+                .block__area__product__good-pic_price_box
+                  = image_tag @image.goods_picture.url, class: "goods_picture_ladies"
+                  .block__area__product__good-pic_price_box__price
+                    = "¥#{@good.price}"
+                .block__area__product__title
+                  = @good.goods_description
 
 =link_to tests_exhibit_path, class: 'exhibit_btn' do
   .exhibit_btn__moji
