--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,4 +31,5 @@
 @import 'put_up_goods_on_sale';
 @import 'purchased_on_deal';
 @import 'tag-master';
-@import 'purchase_completed'
+@import 'purchase_completed';
+@import 'category_tree'
