--- a/app/assets/stylesheets/main_page_header.scss
+++ b/app/assets/stylesheets/main_page_header.scss
@@ -155,10 +155,14 @@
 
 
             &__right{
+              // height: 100px;
+              // width: 100px;
               margin-top: 8px;
               display: flex;
             
               &__1{
+                // height: 100px;
+                // width: 100px;
                 text-align: center;
 
                 &__1{
