--- a/app/views/shared/_product-details.html.haml
+++ b/app/views/shared/_product-details.html.haml
@@ -18,8 +18,9 @@
           %tr
             %th.category 出品者
             %td
-              = link_to "#", class:"name" do
-                名前（仮）
+              = link_to "#",  class:"name" do
+                = @user.username
+                -# 名前（仮）
               .user-rating
                 .item-user-ratings
                   %i.fas.fa-laugh 
@@ -36,13 +37,19 @@
               %td
                 .item-detail-table-sub-category
                 %i.fa.fa-chevron-right.items-link_to
-                
+                  = @good.category.ancestry
+                  -# = @good.category_id
+                  -# = @category_children
                 .item-detail-table-sub-sub-category
                 %i.fa.fa-chevron-right.items-link_to
-                
+                  = @good.category.category_name
+                  -# = link_to "#",
+                  -# = @good.categories.first.category_name
+                  -# = @category.goods.category_id
             %tr
               %th.category ブランド
               %td
+              -# = @good 
 
             %tr
               %th.category 商品のサイズ
@@ -62,8 +69,11 @@
               
             %tr
               %th.category 発送元地域
-              %td.name 千葉県
-              = @good.prefecture
+              %td
+                = link_to @good.prefecture.name
+              -# = @good :prefecture_id, Prefecture.all, :id, :name,  {include_blank: '未選択'},{class: "category"}
+
+              -# = @good.goodprefecture   修正する。
               
             %tr
               %th.category 発送日の目安
@@ -72,7 +82,8 @@
 
       .price-box
         %span.price-box__price
-          = @good.price
+          = number_to_currency(@good.price, unit: "￥", precision: 0)
+          -# = @good.price
         %span.price-box__tax
           (税込)
         %span.price-box__fee
