--- a/app/views/goods/_show_goods_all.html.haml
+++ b/app/views/goods/_show_goods_all.html.haml
@@ -1,9 +1,7 @@
-.block__area
-  - (1..10).each do |i|
-    .block__area__product
-      .block__area__product__good-pic_price_box
-        -# = image_tag @image.goods_picture.url, class: "goods_picture_ladies"
-        .block__area__product__good-pic_price_box__price
-          = "¥#{@good.price}"
-      .block__area__product__title
-        = "¥#{@good.goods_name}"
+-# - @images.each do |image| 
+- (1..10).each do |i|
+  .block__area__product
+    .block__area__product__good-pic_price_box
+      .block__area__product__good-pic_price_box__price  
+    .block__area__product__title
+      
